# OmniSaveSwitch

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  build.sh  build_overlay.sh  deploy.sh  deploy_raw_exefs.sh  docker-compose.yml  implement_core.sh  skills-lock.json
.claude/: CLAUDE.md  settings.json
.claude/skills/caveman/: SKILL.md
.github/: CODEOWNERS  labels.yml  pull_request_template.md  release-please-config.json
.github/ISSUE_TEMPLATE/: bug_report.yml  crash_report.yml  feature_request.yml
.github/workflows/: cpp-ci.yml  labels.yml  overlay-ci.yml  release-build.yml  release-please.yml  sysmodule-ci.yml
context/switch-client/: 00-use-cases.md  01-diagram.md  01-sync-state-machine.md  02-data-model.md  03-resilience-rules.md  04-device-sync-api.md  06-sysmodule-backend.md  07-ovl-frontend.md  XX-data-integrity.md  XX-data-safety-restore.md  XX-edge-cases.md  xx-faster-network.md  xx-lease.md  xx-wifi.md  xx-zip.md
docker/: Dockerfile.test-cpp
overlay/: Dockerfile  Makefile  omnisave.nacp  omnisave.ovl  omnitest.nacp  omnitest.ovl
overlay/source/: history_parser.cpp  history_parser.hpp  main.cpp  parse_helpers.hpp  signal_writer.cpp  signal_writer.hpp  status_parser.cpp  status_parser.hpp
overlay/tests/: CMakeLists.txt  test_history_parser.cpp  test_signal_writer.cpp  test_status_parser.cpp
scripts/: enforce_sibling_tests.sh  stub_server.py
sysmodule/: Dockerfile  Makefile  OmniSave.json  OmniSave.nso  OmniSave.nsp  toolbox.json
sysmodule/include/: catalog.h  omnisave.h
sysmodule/source/: catalog.cpp  config.cpp  crc32.cpp  fs_helpers.cpp  fsm.cpp  game_event.cpp  game_event.h  http.cpp  main.cpp  notif.cpp  recovery.cpp  save_clear.cpp  save_clear.h  save_dump.cpp  save_hash.cpp  save_ops.cpp  save_pack.cpp  save_pack_read.cpp  state.cpp  status.cpp  sync_prefs.cpp  sync_prefs.h  transport.cpp  transport_poll.cpp  transport_upload.cpp
sysmodule/tests/: CMakeLists.txt  test_catalog.cpp  test_config.cpp  test_fsm.cpp  test_game_event.cpp  test_inbound_meta.cpp  test_recovery.cpp  test_save_hash.cpp  test_save_ops.cpp  test_save_pack.cpp  test_save_spaces.cpp  test_state.cpp  test_sync_prefs.cpp
sysmodule/tests/mock/: catalog_mock.cpp  catalog_mock.hpp  fsm_deps.cpp  fsm_deps.hpp  omnisave_globals.cpp  state_test_deps.cpp  switch.h  vfs.cpp  vfs.hpp
sysmodule/tests/mock/curl/: curl.h
